// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="sc-EHOje bofIsN sc-htpNat jDKbhD"
>
  <input
    className="sc-ifAKCX biAHY"
    defaultValue="foo"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="sc-EHOje bofIsN sc-htpNat jDKbhD"
>
  <input
    className="sc-ifAKCX biAHY"
    defaultValue="foo"
    id="input-with-label"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="sc-bxivhb hPVdPP sc-bwzfXH eQhPVJ"
    htmlFor="input-with-label"
  >
    Text label
  </label>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="sc-EHOje bofIsN sc-htpNat jDKbhD"
>
  <input
    className="sc-ifAKCX cRiTFM"
    defaultValue="foo"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  
  <div
    className="sc-bdVaJa kKTvpA"
  >
    Error message
  </div>
</div>
`;
